--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,9 @@ android {
 
 dependencies {
 
+    // Google
+    implementation("com.google.android.gms:play-services-auth:20.1.0")
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.6.0'
 
     // Facebook
     implementation 'com.facebook.android:facebook-login:13.0.0'
