--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,12 +5,6 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
-    <queries>
-        <provider
-            android:authorities="com.facebook.katana.provider.PlatformProvider"
-            android:exported="true" />
-    </queries>
-
     <application
         android:name=".MyApplication"
         android:allowBackup="true"
@@ -30,8 +24,8 @@
             android:exported="true" />
         <activity
             android:name=".MainActivity"
-            android:theme="@style/Theme.JolieCafe"
-            android:exported="true" >
+            android:exported="true"
+            android:theme="@style/Theme.JolieCafe">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -42,14 +36,6 @@
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
             android:value="@string/facebook_app_id" />
-
-        <meta-data
-            android:name="com.facebook.sdk.AutoLogAppEventsEnabled"
-            android:value="false" />
-
-        <meta-data
-            android:name="com.facebook.sdk.AdvertiserIDCollectionEnabled"
-            android:value="false" />
 
         <activity
             android:name="com.facebook.FacebookActivity"
@@ -66,6 +52,13 @@
                 <data android:scheme="@string/fb_login_protocol_scheme" />
             </intent-filter>
         </activity>
+
     </application>
+
+    <queries>
+        <provider
+            android:authorities="com.facebook.katana.provider.PlatformProvider"
+            android:exported="true" />
+    </queries>
 
 </manifest>
