--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.JolieCafe" >
         <activity
+            android:name=".ui.activities.address_book.AddressBookActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.activities.profile.ProfileActivity"
             android:exported="false" />
         <activity
