--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.nt118.joliecafe" >
+    package="com.nt118.joliecafe">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -18,7 +18,10 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.JolieCafe" >
+        android:theme="@style/Theme.JolieCafe">
+        <activity
+            android:name=".ui.activities.order_history.OrderHistoryActivity"
+            android:exported="false" />
         <activity
             android:name=".ui.activities.address_book.AddressBookActivity"
             android:exported="false" />
@@ -43,7 +46,7 @@
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:theme="@style/Theme.JolieCafe" >
+            android:theme="@style/Theme.JolieCafe">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -61,7 +64,7 @@
             android:label="@string/app_name" />
         <activity
             android:name="com.facebook.CustomTabActivity"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
 
