--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,7 +61,6 @@ dependencies {
     implementation 'com.google.firebase:firebase-firestore-ktx:24.1.0'
     implementation 'com.google.firebase:firebase-storage-ktx:20.0.1'
     implementation 'com.google.firebase:firebase-messaging-ktx:23.0.2'
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 
 
     // Room component
@@ -98,7 +97,7 @@ dependencies {
     implementation("io.coil-kt:coil:1.4.0")
 
     // Gson
-    implementation 'com.google.code.gson:gson:2.8.8'
+    implementation 'com.google.code.gson:gson:2.8.9'
 
     // Jsoup
     implementation 'org.jsoup:jsoup:1.14.2'
@@ -115,6 +114,10 @@ dependencies {
     // Shimmer effect
     implementation 'com.facebook.shimmer:shimmer:0.5.0'
 
+    // Image slider
+    implementation 'com.tbuonomo:dotsindicator:4.2'
+    implementation 'com.makeramen:roundedimageview:2.3.0'
+
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.5.0'
@@ -123,8 +126,6 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
-    implementation 'com.tbuonomo:dotsindicator:4.2'
-    implementation 'com.makeramen:roundedimageview:2.3.0'
 }
 
 kapt {
