--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,10 +39,12 @@ android {
         viewBinding true
         dataBinding = true
     }
-
     packagingOptions {
-        exclude 'META-INF/DEPENDENCIES'
+        resources {
+            excludes += ['META-INF/DEPENDENCIES']
+        }
     }
+
 }
 
 dependencies {
@@ -105,13 +107,13 @@ dependencies {
     implementation 'org.jsoup:jsoup:1.14.2'
 
     // Navigation
-    def nav_version = "2.4.1"
+    def nav_version = "2.4.2"
     implementation("androidx.navigation:navigation-fragment-ktx:$nav_version")
     implementation("androidx.navigation:navigation-ui-ktx:$nav_version")
 
     // Dagger - Hilt
-    implementation 'com.google.dagger:hilt-android:2.38.1'
-    kapt 'com.google.dagger:hilt-compiler:2.38.1'
+    implementation 'com.google.dagger:hilt-android:2.40.5'
+    kapt 'com.google.dagger:hilt-compiler:2.40.5'
 
     // Shimmer effect
     implementation 'com.facebook.shimmer:shimmer:0.5.0'
