--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,6 +50,11 @@ android {
 
 dependencies {
 
+    // paging 3
+    def paging_version = "3.1.1"
+    implementation("androidx.paging:paging-runtime:$paging_version")
+
+
     implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.0"
 
     // MOMO SDK
@@ -67,9 +72,9 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics'
     implementation 'com.google.firebase:firebase-auth-ktx:21.0.3'
     implementation 'com.google.firebase:firebase-database-ktx:20.0.4'
-    implementation 'com.google.firebase:firebase-firestore-ktx:24.1.0'
+    implementation 'com.google.firebase:firebase-firestore-ktx:24.1.1'
     implementation 'com.google.firebase:firebase-storage-ktx:20.0.1'
-    implementation 'com.google.firebase:firebase-messaging-ktx:23.0.2'
+    implementation 'com.google.firebase:firebase-messaging-ktx:23.0.3'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 
 
