--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,8 @@ android {
 }
 
 dependencies {
+    implementation 'androidx.paging:paging-runtime-ktx:3.0.0'
+
 
     // paging 3
     def paging_version = "3.1.1"
