--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,8 +57,6 @@ android {
 }
 
 dependencies {
-    implementation 'androidx.paging:paging-runtime-ktx:3.0.0'
-
 
     // paging 3
     def paging_version = "3.1.1"
@@ -118,6 +116,7 @@ dependencies {
     // Lifecycle
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.4.1'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.1'
 
     // Coil
     implementation("io.coil-kt:coil:1.4.0")
