--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,6 +57,10 @@ android {
 }
 
 dependencies {
+    // Camera X
+    implementation 'androidx.camera:camera-core:1.0.2'
+    implementation 'androidx.camera:camera-lifecycle:1.0.2'
+    implementation "androidx.camera:camera-camera2:1.0.2"
 
     // paging 3
     def paging_version = "3.1.1"
