--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,15 +53,16 @@ android {
             excludes += ['META-INF/DEPENDENCIES']
         }
     }
+    namespace 'com.nt118.joliecafe'
 
 }
 
 dependencies {
     // Camera X
-    implementation 'androidx.camera:camera-core:1.1.0-rc01'
-    implementation 'androidx.camera:camera-lifecycle:1.1.0-rc01'
-    implementation "androidx.camera:camera-camera2:1.1.0-rc01"
-    implementation 'androidx.camera:camera-view:1.1.0-rc01'
+    implementation 'androidx.camera:camera-core:1.2.0-alpha01'
+    implementation 'androidx.camera:camera-lifecycle:1.2.0-alpha01'
+    implementation "androidx.camera:camera-camera2:1.2.0-alpha01"
+    implementation 'androidx.camera:camera-view:1.2.0-alpha01'
 
     // paging 3
     def paging_version = "3.1.1"
@@ -74,8 +75,8 @@ dependencies {
     implementation 'com.github.momo-wallet:mobile-sdk:1.0.7'
 
     // Google
-    implementation("com.google.android.gms:play-services-auth:20.1.0")
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.6.0'
+    implementation("com.google.android.gms:play-services-auth:20.2.0")
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.6.1'
 
     // Facebook
     implementation 'com.facebook.android:facebook-login:13.0.0'
@@ -83,11 +84,11 @@ dependencies {
     // Firebase
     implementation platform('com.google.firebase:firebase-bom:29.1.0')
     implementation 'com.google.firebase:firebase-analytics'
-    implementation 'com.google.firebase:firebase-auth-ktx:21.0.3'
-    implementation 'com.google.firebase:firebase-database-ktx:20.0.4'
-    implementation 'com.google.firebase:firebase-firestore-ktx:24.1.1'
+    implementation 'com.google.firebase:firebase-auth-ktx:21.0.4'
+    implementation 'com.google.firebase:firebase-database-ktx:20.0.5'
+    implementation 'com.google.firebase:firebase-firestore-ktx:24.1.2'
     implementation 'com.google.firebase:firebase-storage-ktx:20.0.1'
-    implementation 'com.google.firebase:firebase-messaging-ktx:23.0.3'
+    implementation 'com.google.firebase:firebase-messaging-ktx:23.0.4'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
 
 
@@ -115,8 +116,8 @@ dependencies {
     implementation("com.jakewharton.retrofit:retrofit2-kotlinx-serialization-converter:0.8.0")
 
     // Coroutine
-    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.0")
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.0'
+    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.1")
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.1'
 
     // Lifecycle
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.4.1'
@@ -150,7 +151,7 @@ dependencies {
 
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.1'
-    implementation 'com.google.android.material:material:1.5.0'
+    implementation 'com.google.android.material:material:1.6.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
