working on checkout

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -159,6 +159,9 @@ dependencies {
 
     // Map api
     implementation 'com.google.android.gms:play-services-maps:18.0.2'
+
+    // Gson
+    implementation 'com.google.code.gson:gson:2.9.0'
 }
 
 kapt {
