--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,10 +59,10 @@ android {
 
 dependencies {
     // Camera X
-    implementation 'androidx.camera:camera-core:1.2.0-alpha01'
-    implementation 'androidx.camera:camera-lifecycle:1.2.0-alpha01'
-    implementation "androidx.camera:camera-camera2:1.2.0-alpha01"
-    implementation 'androidx.camera:camera-view:1.2.0-alpha01'
+    implementation 'androidx.camera:camera-core:1.2.0-alpha02'
+    implementation 'androidx.camera:camera-lifecycle:1.2.0-alpha02'
+    implementation "androidx.camera:camera-camera2:1.2.0-alpha02"
+    implementation 'androidx.camera:camera-view:1.2.0-alpha02'
 
     // paging 3
     def paging_version = "3.1.1"
@@ -84,7 +84,7 @@ dependencies {
     // Firebase
     implementation platform('com.google.firebase:firebase-bom:29.1.0')
     implementation 'com.google.firebase:firebase-analytics'
-    implementation 'com.google.firebase:firebase-auth-ktx:21.0.4'
+    implementation 'com.google.firebase:firebase-auth-ktx:21.0.5'
     implementation 'com.google.firebase:firebase-database-ktx:20.0.5'
     implementation 'com.google.firebase:firebase-firestore-ktx:24.1.2'
     implementation 'com.google.firebase:firebase-storage-ktx:20.0.1'
@@ -149,13 +149,16 @@ dependencies {
     implementation 'com.tbuonomo:dotsindicator:4.2'
     implementation 'com.makeramen:roundedimageview:2.3.0'
 
-    implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.appcompat:appcompat:1.4.1'
-    implementation 'com.google.android.material:material:1.6.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
+    implementation 'androidx.core:core-ktx:1.8.0'
+    implementation 'androidx.appcompat:appcompat:1.4.2'
+    implementation 'com.google.android.material:material:1.6.1'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    // test
+    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.2'
 
     // Map api
     implementation 'com.google.android.gms:play-services-maps:18.0.2'
